# pathbench

./: .gitignore  .readthedocs.yaml  CONTRIBUTING.md  LICENSE  README.md  comparison_test.sh  comparison_test_2.sh  complex_evaluation_summary.tex  extract_copas_paths.py  extract_easycall_paths.py  extract_neurovoz_paths.py  extract_torgo_paths.py  extract_youtube_paths.py  pyproject.toml  results_table.csv  run_all_comparisons.sh  run_utt_evaluation.sh  setup.py
.github/workflows/: tests.yml
datasets/copas/: README.md
datasets/copas/control/utterances/: spk2score  text  utt2spk
datasets/copas/control/word/: spk2score  text
datasets/copas/pathological/word/: text  utt2spk  wav.scp
datasets/easycall/: README.md
datasets/easycall/control/commands/: spk2score  text  utt2spk  wav.scp
datasets/easycall/pathological/commands/: spk2score  text  utt2spk  wav.scp
datasets/neurovoz/: README.md
datasets/neurovoz/control/: spk2score  wav.scp
datasets/neurovoz/pathological/: spk2score  text
datasets/neurovoz_all/control/: text  utt2age  utt2gender  utt2score  utt2spk
datasets/neurovoz_all/pathological/: spk2score  spk2score_generated  text  utt2age  utt2gender  utt2score  utt2spk  wav.scp
datasets/neurovoz_balanced/control/: spk2age  spk2score  text  utt2age  utt2gender  utt2score  utt2spk  wav.scp
datasets/neurovoz_balanced/pathological/: text  utt2age  utt2gender  utt2score  utt2spk  wav.scp
datasets/torgo/: README.md
datasets/torgo/control/utterances/: spk2score  text  (+2 more)
datasets/uaspeech/: README.md
datasets/youtube/: spk2score  text  utt2score  utt2spk  wav.scp  wav_hash.scp
docs/: architecture.rst  conf.py  index.rst  installation.rst  results_table.rst
docs/_static/: pb_datatable.css  pb_datatable.js
docs/api/: dataset.rst  evaluators.rst  index.rst  metrics.rst  utils.rst  vad.rst
pathbench/: __init__.py  age_evaluator.py  articulatory_precision_evaluator.py  artp_double_asr_evaluator.py  asr_evaluators.py  cpp_evaluator.py  dataset.py  evaluator.py  f0_range_evaluator.py  model_registry.py  nad_evaluator.py  p_estoi_evaluator.py  reference_evaluator.py  speech_rate.py  string_clean.py  utils.py  vad.py  vsa_evaluator.py  wada_snr.py
pathbench/handcrafted/: modulation_spectrogram.py
results/datasets/youtube/: dummy_scores.csv
scripts/: combine_results.py  evaluate_from_csv.py  evaluate_spk2score.py  evaluate_spk2score_test.py  evaluate_spk2score_test_2.py  evaluate_utt2score.py  generate_wav_hashes.py
tests/: test_evaluators.py
tools/: Makefile
(+292 files in other folders)
